fixed spacing on heatmap mobile, added 90+ minute for timesl;ider

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -91,6 +91,7 @@ $spacing-unit: 1rem;
 .heatmapControlsContainer {
   width: 100%;
   max-width: 1000px;
+  padding: 0 1rem;
 }
 
 .title {
@@ -126,7 +127,8 @@ $spacing-unit: 1rem;
   align-items: center;
   gap: 1rem;
   margin: 1rem;
-  padding: 1rem 0 1rem;
+  padding: 1rem 0.5rem 2rem;
+  
   max-width: $container-max-width;
   background-color: var(--color-bg-elevated);
   border: 1px solid var(--color-border);
